tests/baselines/reference/qualifiedName_entity-name-resolution-does-not-affect-class-heritage.errors.txt
qualifiedName_entity-name-resolution-does-not-affect-class-heritage.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
qualifiedName_entity-name-resolution-does-not-affect-class-heritage.ts(5,20): error TS2507: Type 'number' is not a constructor function type.


==== qualifiedName_entity-name-resolution-does-not-affect-class-heritage.ts (2 errors) ====
    module Alpha {
           ~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var x = 100;
    }
    
    class Beta extends Alpha.x {
                       ~~~~~~~
!!! error TS2507: Type 'number' is not a constructor function type.
    }